Adding a test and giving the GitHub action a test...

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -24,6 +24,7 @@ play.filters.enabled += "play.filters.csp.CSPFilter"
 play.modules.enabled += "net.channull.modules.BaseModule"
 play.modules.enabled += "net.channull.modules.JobModule"
 play.modules.enabled += "net.channull.modules.SilhouetteModule"
+play.modules.enabled += "net.channull.modules.AppModule"
 play.modules.enabled += "play.api.libs.mailer.MailerModule"
 
 play.modules.disabled += "io.github.honeycombcheesecake.play.silhouette.api.actions.SecuredErrorHandlerModule"
