--- a/ui/package.json
+++ b/ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "channull",
   "version": "0.1.0",
-  "license": "MIT",
+  "license": "AGPL",
   "scripts": {
     "start": "react-scripts start",
     "build": "rimraf ../public && react-scripts build && ncp build ../public && rimraf build",
