Added methods in ChanNullBanDAO and ChanNullPostDAO to find expired records. Called added methods to find and delete expired records in ChanNullService. Added calls to ChanNullService methods in RecordCleaner (was AuthTokenCleaner).

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -45,11 +45,11 @@ akka {
   loglevel = "INFO"
   jvm-exit-on-fatal-error=off
 
-  # Auth token cleaner
-  quartz.schedules.AuthTokenCleaner {
-    expression = "0 0 */1 * * ?"
+  # Record cleaner
+  quartz.schedules.RecordCleaner {
+    expression = "0 0/15 * * * ?"
     timezone = "UTC"
-    description = "cleanup the auth tokens on every hour"
+    description = "cleanup expired records every 15 minutes"
   }
 }
 
@@ -95,5 +95,6 @@ play.filters.csrf.contentType.blackList=[ // We would also check AJAX requests f
   "application/json"
 ]
 
+recaptcha.secretKey = ${?RECAPTCHA_SECRETKEY}
 
 include "silhouette.conf"
